Fuyo.css
/* ... */
/* Hiding irrelevant elements */
#input-panel,
yt-live-chat-viewer-engagement-message-renderer,
yt-live-chat-header-renderer,
#live-chat-banners,
yt-live-chat-banner-manager,
yt-live-chat-banner-renderer,
#separator,
#fab-container,
.yt-reaction-control-panel-button-view-model,
#toast-container,
#ticker {
    display: none !important;
}

#menu,
yt-live-chat-action-panel-renderer,
ytd-sponsorships-live-chat-gift-redemption-announcement-renderer,
#action-panel {
    display: none !important;
}

html,
body,
yt-live-chat-renderer,
#item-scroller {
    background-color: transparent !important;
    scrollbar-width: none !important;
}

#item-scroller::-webkit-scrollbar {
    display: none !important;
}

/* Disable default reveal animation */
yt-live-chat-item-list-renderer #items {
    transform: translateY(0) !important;
}

/* Animation for message appearing */
@keyframes message-slide-up {
    from {
        transform: translateY(5rem);
        filter: brightness(0.5);
    }
    to {
        transform: translateY(0rem);
        filter: brightness(1);
    }
}

/* Message container */
yt-live-chat-text-message-renderer {
    position: relative !important;
    display: block !important;
    padding-left: var(--chat-message-depth-left-width) !important;
    padding-top: var(--chat-message-padding-vertical) !important;
    padding-bottom: calc(
        var(--chat-border-width) + var(--chat-message-padding-vertical)
    ) !important;
    animation: 1s message-slide-up !important;
    width: 35rem;

    /* Name plate and message background dots */
    --chat-dot-spacing-first: var(--chat-dot-spacing);
    --chat-dot-spacing-second: calc(var(--chat-dot-spacing) / 2);
    /* Ensure a half size offset */
    --chat-dot-spacing-half-offset: calc(
        (var(--chat-dot-spacing) / 2) - var(--chat-message-background-dot-size)
    );
    --dot-background-position: calc(
                var(--chat-dot-spacing-first) +
                    var(--chat-dot-spacing-half-offset)
            )
            calc(
                100% - var(--chat-dot-spacing-first) -
                    var(--chat-dot-spacing-half-offset)
            ),
        calc(
                var(--chat-dot-spacing-second) +
                    var(--chat-dot-spacing-half-offset)
            )
            calc(
                100% - var(--chat-dot-spacing-second) -
                    var(--chat-dot-spacing-half-offset)
            ) !important;
}

@keyframes author-slide-up {
    from {
        transform: rotate(-4deg) var(--chat-author-offset);
    }
    to {
        transform: rotate(var(--chat-author-rotation)) var(--chat-author-offset);
    }
}

/* Message author container */
yt-live-chat-text-message-renderer yt-live-chat-author-chip {
    font-family: var(--chat-font) !important;
    font-size: var(--chat-font-size) !important;
    color: var(--chat-author-color-font) !important;
    -webkit-text-stroke: var(--chat-author-color-font-stroke) !important;
    transform-origin: center left !important;
    height: var(--chat-author-height) !important;
    padding-left: calc(var(--chat-author-photo-size) + 1.5rem) !important;
    padding-right: 1rem !important;
    position: relative !important;
    box-sizing: border-box !important;
    display: inline-flex !important;
    align-items: center !important;
    animation: 1s author-slide-up forwards !important;
    z-index: 1 !important;
}

/* Message author depth element */
yt-live-chat-text-message-renderer yt-live-chat-author-chip::before {
    content: "" !important;
    position: absolute !important;
    inset: 0 !important;
    /* Offset from parent */
    left: -0.5rem !important;
    top: 0.5rem !important;
    width: calc(100% + var(--chat-border-width)) !important;
    height: 100% !important;
    background-color: var(--chat-author-color-viewer) !important;
    border: var(--chat-border-width) solid
        var(--chat-author-color-viewer-border) !important;
    border-radius: var(--chat-border-radius) !important;
    box-sizing: border-box !important;
    z-index: -2 !important;
}

/* Message author background */
yt-live-chat-text-message-renderer yt-live-chat-author-chip::after {
    content: "" !important;
    position: absolute !important;
    inset: 0 !important;
    width: 100% !important;
    height: 100% !important;
    background-color: var(--chat-author-color-viewer) !important;
    border: var(--chat-border-width) solid
        var(--chat-author-color-viewer-border) !important;
    border-radius: var(--chat-border-radius) !important;
    box-sizing: border-box !important;
    z-index: -1 !important;
    background-image:
        /* First row of dots */ radial-gradient(
            var(--chat-author-background-dot-color)
                var(--chat-author-background-dot-size),
            transparent 0
        ),
        /* Second row of dots */
            radial-gradient(
                var(--chat-author-background-dot-color)
                    var(--chat-author-background-dot-size),
                transparent 0
            ) !important;
    background-position: var(--dot-background-position) !important;
    background-size: var(--chat-dot-spacing) var(--chat-dot-spacing) !important;
}

/* Position and animate author photo */
yt-live-chat-text-message-renderer > yt-img-shadow#author-photo {
    position: absolute !important;
    left: 1rem !important;
    min-height: var(--chat-author-height) !important;
    display: inline-flex !important;
    align-items: center !important;
    z-index: 2 !important;
    animation: 1s author-slide-up forwards !important;
}

/* Author photo appearance */
yt-live-chat-text-message-renderer > yt-img-shadow#author-photo > img {
    width: var(--chat-author-photo-size) !important;
    height: var(--chat-author-photo-size) !important;
    border-radius: 100% !important;
}
/* ... */

